--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start_dev": "nodemon index.js",
     "start": "node index.js",
-    "test": "NODE_ENV=test & clear & jest --coverage --runInBand --testEnvironment=node --detectOpenHandles --runInBand --forceExit"
+    "test": "jest --coverage --runInBand --testEnvironment=node --detectOpenHandles --runInBand --forceExit"
   },
   "author": "Mai Thanh Danh",
   "license": "ISC",
@@ -18,11 +18,11 @@
     "express-validator": "^6.6.1",
     "mongoose": "^5.10.7",
     "morgan": "^1.10.0",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "supertest": "^6.0.1",
+    "dotenv": "^8.2.0"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0",
-    "nodemon": "^2.0.6",
-    "supertest": "^6.0.1"
+    "nodemon": "^2.0.6"
   }
 }
