--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "cookie-parser": "^1.4.5",
     "cookies": "^0.8.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
+    "jest": "^26.6.3",
     "mongoose": "^5.10.7",
     "morgan": "^1.10.0",
-    "winston": "^3.3.3",
     "supertest": "^6.0.1",
-    "dotenv": "^8.2.0"
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
