--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,19 +1,9 @@
 orbs:
-  node: circleci/node@4.1.0
+  heroku: circleci/heroku@0.0.10
 
 version: 2.1
 
-jobs:
-  test:
-    executor: node/default
-    steps:
-      - checkout
-      - node/install-packages:
-          cache-path: ~/project/node_modules
-          override-ci-command: npm install
-      - run: npm test
-      
 workflows:
-  node-tests:
+  heroku_deploy:
     jobs:
-      - test
+      - heroku/deploy-via-git
