--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start_dev": "nodemon index.js",
     "start": "node index.js",
-    "test": "jest --verbose --coverage --runInBand --testEnvironment=node --detectOpenHandles --forceExit"
+    "test": "NODE_ENV=test & clear & jest --verbose --coverage --runInBand --testEnvironment=node --detectOpenHandles --forceExit",
+    "image:build": "docker build -t product:latest -f Dockerfile ."
   },
   "author": "Mai Thanh Danh",
   "license": "ISC",
@@ -18,6 +19,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
+    "ip": "^1.1.5",
     "jest": "^26.6.3",
     "mongoose": "^5.10.7",
     "morgan": "^1.10.0",
